--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,4 @@ spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 spring.mvc.view.prefix=/webapp/
-spring.mvc.view.suffix=.jsp
-
+spring.mvc.view.suffix=.html
