--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,20 @@
-server.port = 8098
+server.port=8098
 
 spring.application.name=spring-boot-MusicApp
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/musicapp
 spring.datasource.username=root
 spring.datasource.password=1234
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
-spring.mvc.view.prefix=/webapp/
-spring.mvc.view.suffix=.html
+spring.thymeleaf.prefix=classpath:/webapp/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML
+
+spring.resources.static-locations=classpath:/static/, file:src/main/webapp/assets/
+
+logging.level.org.springframework.security=DEBUG
